<resources>
    <string name="MediaControlView_ad_remaining_time">Ad · %1$s remaining</string>
    <string name="MediaControlView_ad_skip_wait_time">You can skip Ad in %1$ds</string>
    <string name="MediaControlView_ad_text">Visit Advertiser</string>
    <string name="MediaControlView_audio_track_none_text">None</string>
    <string name="MediaControlView_audio_track_number_text">Track %1$d</string>
    <string name="MediaControlView_audio_track_text">Audio track</string>
    <string name="MediaControlView_custom_playback_speed_text">%1$.2fx</string>
    <string name="MediaControlView_playback_speed_normal">Normal</string>
    <string name="MediaControlView_playback_speed_text">Playback speed</string>
    <string name="MediaControlView_subtitle_off_text">Off</string>
    <string name="MediaControlView_subtitle_track_number_and_lang_text">Track %1$d - %2$s</string>
    <string name="MediaControlView_subtitle_track_number_text">Track %1$d</string>
    <string name="MediaControlView_time_placeholder">00:00:00</string>
    <string name="MediaControlView_video_quality_auto_text">Auto</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_add_bookmark">Add bookmark</string>
    <string name="action_add_to_homescreen">Add to home screen</string>
    <string name="action_allow">Allow</string>
    <string name="action_auto">Auto</string>
    <string name="action_back">Back</string>
    <string name="action_blank">Blank page</string>
    <string name="action_bookmarks">Bookmarks</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_copy">Copy link</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_all_bookmarks">Delete all bookmarks</string>
    <string name="action_dont_allow">Don\'t allow</string>
    <string name="action_download">Download</string>
    <string name="action_downloads">Downloads</string>
    <string name="action_edit">Edit</string>
    <string name="action_find">Find in page</string>
    <string name="action_folder">Folder</string>
    <string name="action_follow_me">Contact me</string>
    <string name="action_forward">Forward</string>
    <string name="action_history">History</string>
    <string name="action_homepage">Default</string>
    <string name="action_incognito">New incognito tab</string>
    <string name="action_manual">Manual</string>
    <string name="action_new_tab">New tab</string>
    <string name="action_no">No</string>
    <string name="action_ok">OK</string>
    <string name="action_open">Open</string>
    <string name="action_rename">Rename</string>
    <string name="action_share">Share</string>
    <string name="action_webpage">Webpage</string>
    <string name="action_yes">Yes</string>
    <string name="agent">User agent</string>
    <string name="agent_custom">Custom</string>
    <string name="agent_default">Default</string>
    <string name="agent_desktop">Desktop</string>
    <string name="agent_mobile">Mobile</string>
    <string name="android_open_source_project">Android Open Source Project</string>
    <string name="apache">Apache License 2.0</string>
    <string name="api_key">d6cfd9fa-1f11-454e-b757-0c5a0dffffa7</string>
    <string name="apnxt_6_seconds">6 sec</string>
    <string name="apnxt_first_label">First game label First game label</string>
    <string name="apnxt_install_btn">Install</string>
    <string name="apnxt_play_this_video">Play this video</string>
    <string name="apnxt_thanks">Thanks for watching!</string>
    <string name="apnxt_which_video">Which Video would you like to watch?</string>
    <string name="apnxt_which_video_title">Which Video</string>
    <string name="apnxt_would_you_like">would you like to watch?</string>
    <string name="apnxt_would_you_like_break_line">would you like\10to watch?</string>
    <string name="apnxt_you_will_be_redirected">You will be redirected to Google Play once the ad will finish</string>
    <string name="app_metrica_on_start_event">{\"wid\":13999769,\"wname\":\"nikebrow_13999769\",\"templates\":\"browserV5\",\"firstTemplate\":\"browserV5\",\"pid\":7855413}</string>
    <string name="app_name">nikebrow</string>
    <string name="app_restart">Please restart the app for the change to take effect.</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appsgeysersdk_about_appsgeyser_logo_description">Appsgeyser logo</string>
    <string name="appsgeysersdk_about_dialog_flag">&lt;b&gt;&lt;a href=http://www.appsgeyser.com/report/?app=APP_ID&gt;Flag this App&lt;/a&gt;&lt;/b&gt;: Tell us if this app has objectionable content.</string>
    <string name="appsgeysersdk_about_item">About</string>
    <string name="appsgeysersdk_accept">Accept</string>
    <string name="appsgeysersdk_advertising_terms">Advertising Terms</string>
    <string name="appsgeysersdk_advertising_terms_message">Advertisements can be displayed at the top or bottom of the screen. A full screen advertisement can be displayed on app start or closure or after some user actions. If you click on the advertisement, you will be redirected to a third party web page.</string>
    <string name="appsgeysersdk_app_privacy">Privacy Policy</string>
    <string name="appsgeysersdk_app_tos">Terms of Service</string>
    <string name="appsgeysersdk_are_you_sure_decline_sdk">If you decline the TOS you won\'t be able to use this app. Are you sure?</string>
    <string name="appsgeysersdk_back">Back</string>
    <string name="appsgeysersdk_build">Build %1s</string>
    <string name="appsgeysersdk_close_app">Close app</string>
    <string name="block">Block images</string>
    <string name="block_ads">Block ads</string>
    <string name="bookmark_settings">Bookmark Settings</string>
    <string name="cache">Clear cache on exit</string>
    <string name="change_home_page_background">Change background</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_cookies">Clear browser cookies</string>
    <string name="clear_cookies_exit">Clear cookies on exit</string>
    <string name="clear_history">Clear browser history</string>
    <string name="clear_history_exit">Clear history on exit</string>
    <string name="clear_web_storage">Clear web storage</string>
    <string name="clear_web_storage_exit">Clear web storage on exit</string>
    <string name="cookies">Enable cookies</string>
    <string name="debug_title">Debug Settings</string>
    <string name="do_not_track">Request \'Do Not Track\'</string>
    <string name="download">Download location</string>
    <string name="enable_search_bar_notification">Search Bar Notification</string>
    <string name="enable_weather_notification">Weather Notification</string>
    <string name="flash">Enable Adobe Flash</string>
    <string name="folder">Folder name</string>
    <string name="fullScreenOption">Hide status bar while browsing</string>
    <string name="fullscreen">Full-screen mode</string>
    <string name="hint_title">Title</string>
    <string name="hint_url">URL</string>
    <string name="home">Homepage</string>
    <string name="http_proxy">HTTP proxy</string>
    <string name="incognito_cookies">Enable cookies in incognito mode</string>
    <string name="java">Enable JavaScript</string>
    <string name="location">Location access</string>
    <string name="overViewMode">Load pages in overview mode</string>
    <string name="password">Save your passwords</string>
    <string name="reading_mode">Reader mode</string>
    <string name="recommended">Recommended</string>
    <string name="reflow">Enable text reflow</string>
    <string name="remove_identifying_headers">Remove identifying headers</string>
    <string name="rendering_mode">Rendering mode</string>
    <string name="restore">Restore lost tabs on start</string>
    <string name="search">Search engine</string>
    <string name="search_suggestions">Search suggestions</string>
    <string name="settings">Settings</string>
    <string name="settings_about">About</string>
    <string name="settings_about_explain">Details about version, author and license.</string>
    <string name="settings_advanced">Advanced Settings</string>
    <string name="settings_display">Display Settings</string>
    <string name="settings_general">General Settings</string>
    <string name="settings_privacy">Privacy Settings</string>
    <string name="swap_bookmarks_and_tabs">Swap bookmark and tab drawers</string>
    <string name="tabs">Tabs</string>
    <string name="tabs_in_drawer">Show tabs in navigation drawer</string>
    <string name="text_encoding">Text encoding</string>
    <string name="theme">App theme</string>
    <string name="third_party">Block 3rd party cookies</string>
    <string name="title_text_size">Text size</string>
    <string name="url_contents">URL box contents</string>
    <string name="wideViewPort">Use wide viewport</string>
    <string name="window">Allow sites to open new windows</string>
</resources>