<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_app_theme" android:title="@string/theme"/>
    <item android:id="@+id/action_new_tab" android:title="@string/action_new_tab"/>
    <item android:id="@+id/action_incognito" android:title="@string/action_incognito"/>
    <item android:id="@+id/action_share" android:title="@string/action_share"/>
    <item android:id="@+id/action_history" android:title="@string/action_history"/>
    <item android:id="@+id/action_downloads" android:title="@string/action_downloads"/>
    <item android:id="@+id/action_find" android:title="@string/action_find"/>
    <item android:id="@+id/action_copy" android:title="@string/action_copy"/>
    <item android:id="@+id/action_add_to_homescreen" android:title="@string/action_add_to_homescreen"/>
    <item android:id="@+id/action_bookmarks" android:title="@string/action_bookmarks"/>
    <item android:id="@+id/action_add_bookmark" android:title="@string/action_add_bookmark"/>
    <item android:id="@+id/action_reading_mode" android:title="@string/reading_mode"/>
    <item android:id="@+id/action_settings" android:title="@string/settings"/>
    <item android:id="@+id/main_menu_about_dialog" android:title="@string/appsgeysersdk_about_item"/>
</menu>
