<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_privacy">
        <CheckBoxPreference android:title="@string/location" android:key="location" android:defaultValue="true"/>
        <CheckBoxPreference android:title="@string/third_party" android:key="third_party" android:defaultValue="false"/>
        <CheckBoxPreference android:title="@string/password" android:key="password" android:summary="@string/recommended" android:defaultValue="true"/>
        <CheckBoxPreference android:title="@string/do_not_track" android:key="do_not_track" android:defaultValue="false"/>
        <CheckBoxPreference android:title="@string/remove_identifying_headers" android:key="remove_identifying_headers" android:defaultValue="false"/>
        <CheckBoxPreference android:title="@string/cache" android:key="clear_cache_exit" android:defaultValue="false"/>
        <CheckBoxPreference android:title="@string/clear_history_exit" android:key="clear_history_exit" android:defaultValue="false"/>
        <CheckBoxPreference android:title="@string/clear_cookies_exit" android:key="clear_cookies_exit" android:defaultValue="false"/>
        <CheckBoxPreference android:title="@string/clear_web_storage_exit" android:key="clear_webstorage_exit" android:defaultValue="false"/>
        <Preference android:title="@string/clear_cache" android:key="clear_cache"/>
        <Preference android:title="@string/clear_history" android:key="clear_history"/>
        <Preference android:title="@string/clear_cookies" android:key="clear_cookies"/>
        <Preference android:title="@string/clear_web_storage" android:key="clear_webstorage"/>
    </PreferenceCategory>
</PreferenceScreen>
